@@ -29,6 +29,7 @@
         "scitools-iris>=3.5",
         "cartopy>=0.20",
         "python-redmine",
+        "python-gitlab",
     ]
 
     [project.urls]
@@ -54,4 +55,5 @@
         "ece.mon.oifs_global_mean_year_mean_timeseries" = "monitoring.oifs_global_mean_year_mean_timeseries:OifsGlobalMeanYearMeanTimeseries"
         "ece.mon.presentation.markdown" = "monitoring.markdown:Markdown"
         "ece.mon.presentation.redmine" = "monitoring.redmine:Redmine"
+        "ece.mon.presentation.gitlab" = "monitoring.gitlab:Gitlab"
         "ece.mon.linear_combination" = "monitoring.linear_combination:LinearCombination"
